--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<li><a href="">Modalidades</a></li>
 				<li><a href="#">Mas</a>
 					<ul class="submenu">
-						<li><a href="../monedas.html">Monedas</a></li>
-						<li><a href="">Rangos</a></li>
+						<li><a href="../monedas.html">Rangos</a></li>
+						<li><a href="">Monedas</a></li>
 						<li><a href="">Donacion</a></li>
 					</ul>
 				</li>
