--- a/monedas.html
+++ b/monedas.html
@@ -17,12 +17,12 @@
 		<nav class="navegacion">
 			<ul class="menu">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="../Photo.html">Photo</a></li>
+				<li><a href="../Photo.html">Modalidades</a></li>
 				<li><a href="#">More</a>
 					<ul class="submenu">
 						<li><a href="../monedas.html">Rangos</a></li>
-						<li><a href="../Info.html">Info</a></li>
-						<li><a href="../Donacion.html">Donation</a></li>
+						<li><a href="../Info.html">Monedas</a></li>
+						<li><a href="../Donacion.html">Donacion</a></li>
 					</ul>
 				</li>
 				<li><a href="../Contact.html">Contact</a></li>
