--- a/monedas.html
+++ b/monedas.html
@@ -18,7 +18,7 @@
 			<ul class="menu">
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../Photo.html">Modalidades</a></li>
-				<li><a href="#">More</a>
+				<li><a href="#">Mas</a>
 					<ul class="submenu">
 						<li><a href="../monedas.html">Rangos</a></li>
 						<li><a href="../Info.html">Monedas</a></li>
@@ -40,7 +40,7 @@
   </header>
   <main>
     <p><h4 style="text-align: center"><b>Rangos</b></h4></p>
-    <p style="text-align: center">Aqui Puedes Comprar Los Rangos<br><br style="color: Orange"></p><p style="color: gold"><b>▪︎King |    2$ USD</style></p<br><br style="color: Orange"></p><p style="color: orange"><b>▪︎Emperior |    1$ USD</style></p><br><br style="color: Orange"></p><p style="color: darkgreen"><b>▪︎Jolly |    0.70$ Usd</style></p><br><br style="color: Orange"></p><p style="color: green"><b>▪︎Gladiator |    0.50$ Usd</style></p><br><br style="color: Orange"></p><p style="color: darkgray"><b>▪︎
+    <p style="text-align: center">Aqui Puedes Comprar Los Rangos<br><br style="color: Orange"></p><p style="color: gold"><b>▪︎King |    2$ USD</style></p><br><br style="color: Orange"></p><p style="color: orange"><b>▪︎Emperior |    1$ USD</style></p><br><br style="color: Orange"></p><p style="color: darkgreen"><b>▪︎Jolly |    0.70$ Usd</style></p><br><br style="color: Orange"></p><p style="color: green"><b>▪︎Gladiator |    0.50$ Usd</style></p><br><br style="color: Orange"></p><p style="color: darkgray"><b>▪︎
    Guardian |    0.20$ Usd</style></p>
     
   </main>
