--- a/modalidades.html
+++ b/modalidades.html
@@ -17,7 +17,7 @@
 		<nav class="navegacion">
 			<ul class="menu">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="">Modalidades</a></li>
+				<li><a href="../modalidades.html">Modalidades</a></li>
 				<li><a href="#">Mas</a>
 					<ul class="submenu">
 						<li><a href="../monedas.html">Rangos</a></li>
@@ -41,7 +41,7 @@
   </header>
   <main>
     <h3 style="text-align:center">Home Page</h3>
-    <p style="text-align: center;font-size: 11">Hola,Bienvenido en el sito web de <br><b>EmperiorNetwork</b>,aqui puedes comprar rangos monedas y tambien donar para ayudar el servidor. </p>
+    <p style="text-align: center;font-size: 11">Por Ahora El Servidor Tienes Solo 1 Modalidad (Skywars).En EL Futuro Tendremos Mas Modalidades, Como Por Esemplo (Skywars, Survival, Kitpvp). </p>
   <p><br style="text-align: center"><b style="text-align: center">Update</b><br>•New Home Page<br>•New System Login/Sign Up</p>
   </main>
 <footer style="text-align: center;color: lightgray">©Copyright 2020</footer>
