--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<nav class="navegacion">
 			<ul class="menu">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="">Modalidades</a></li>
+				<li><a href="../modalidades.html">Modalidades</a></li>
 				<li><a href="#">Mas</a>
 					<ul class="submenu">
 						<li><a href="../monedas.html">Rangos</a></li>
