--- a/modalidades.html
+++ b/modalidades.html
@@ -40,8 +40,8 @@
     
   </header>
   <main>
-    <h3 style="text-align:center">Home Page</h3>
-    <p style="text-align: center;font-size: 11">Por Ahora El Servidor Tienes Solo 1 Modalidad (Skywars).En EL Futuro Tendremos Mas Modalidades, Como Por Esemplo (Skywars, Survival, Kitpvp). </p>
+    <h3 style="text-align:center">Modalidades</h3>
+    <p style="text-align: center;font-size: 11">Por Ahora El Servidor Tienes Solo 1 Modalidad (Skywars).En El Futuro Tendremos Mas Modalidades, Como Por Esemplo (Skywars, Survival, Kitpvp). </p>
   <p><br style="text-align: center"><b style="text-align: center">Update</b><br>•New Home Page<br>•New System Login/Sign Up</p>
   </main>
 <footer style="text-align: center;color: lightgray">©Copyright 2020</footer>
