--- a/donacion.html
+++ b/donacion.html
@@ -41,7 +41,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">INICIO</a></li>
+                <li><a href="../index.hmtl">INICIO</a></li>
                                                             <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 RANGOS
