--- a/donacion.html
+++ b/donacion.html
@@ -25,7 +25,7 @@
     <!-- header -->
     <div class="header">
     <div class="logo">
-        <a href="/"><img height="300" width="600" src="https://cdn.craftingstore.net/rPPmDHlLQ1/7ec6e2c098e5b8cc247b3d953d5faca2/rs1utdkb5vkj1ajzoa82.png"></a>
+        <a href="/"><img height="300" width="600" src="PicsArt_08-04-01.39.39.png"></a>
     </div>
 </div>
     <!-- nav -->
