--- a/donacion.html
+++ b/donacion.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="dns-prefetch" href="https://cdn.craftingstore.net">
-    <link rel="icon" href="https://cdn.craftingstore.net/rPPmDHlLQ1/7ec6e2c098e5b8cc247b3d953d5faca2/w2cks94zv5z53bge7g4a.png">
+    <link rel="icon" href="../PicsArt_08-04-01.39.39.png">
     <title>Imperior Network | INICIO</title>
 
     <link rel="stylesheet" href="https://cdn.craftingstore.net/file/craftingstore-cdn/assets/shops/css/bootstrap.min.css">
