--- a/donacion.html
+++ b/donacion.html
@@ -25,7 +25,7 @@
     <!-- header -->
     <div class="header">
     <div class="logo">
-        <a href="/"><img height="300" width="300" src="https://imgur.com/a/a2zSeCa"></a>
+        <a href="/"><img height="300" width="300" src="../PicsArt_08-04-01.39.39.png"></a>
     </div>
 </div>
     <!-- nav -->
