--- a/donacion.html
+++ b/donacion.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="dns-prefetch" href="https://cdn.craftingstore.net">
+    <link rel="dns-prefetch" href="https://i.redd.it/gx8ebkpckre31.png">
     <link rel="icon" href="../PicsArt_08-04-01.39.39.png">
     <title>Imperior Network | INICIO</title>
 
