--- a/donacion.html
+++ b/donacion.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/assets/7505d64a54e061b7acd54ccd58b49dc43500b635/style.css?v=1597280603">
 </head>
 
-<body style="background-image: url('https://cdn.craftingstore.net/rPPmDHlLQ1/7ec6e2c098e5b8cc247b3d953d5faca2/rpsa32gwv53lidz1h81p.jpg')" >
+<body style="background-image: url('https://i.redd.it/gx8ebkpckre31.png')" >
 
 <!-- container -->
 <div class="container">
