--- a/donacion.html
+++ b/donacion.html
@@ -74,7 +74,7 @@
     <div class="panel-body">
 
                 <div class="col-md-9">
-            <p style="text-align: center;"><br><span style="font-size: 28px;"><span style="color: rgb(84, 141, 212); font-size: 30px;"><strong><span style="color: rgb(0, 0, 0); font-size: 30px;"></span></strong></span><font color="#000000"><strong><span style="color: rgb(146, 205, 220); font-size: 28px;">B I E N V E N I D O&nbsp; &nbsp;A&nbsp;&nbsp;&nbsp;L A&nbsp; T I E N D A&nbsp;&nbsp;&nbsp;D E&nbsp; &nbsp;<u>O N E M C</u></span></strong></font><u></u></span><br></p>
+            <p style="text-align: center;"><br><span style="font-size: 28px;"><span style="color: rgb(84, 141, 212); font-size: 30px;"><strong><span style="color: rgb(0, 0, 0); font-size: 30px;"></span></strong></span><font color="#000000"><strong><span style="color: rgb(146, 205, 220); font-size: 28px;">B I E N V E N I D O&nbsp; &nbsp;A&nbsp;&nbsp;&nbsp;L A&nbsp; T I E N D A&nbsp;&nbsp;&nbsp;D E&nbsp; &nbsp;<u>I M P E R I O R</u></span></strong></font><u></u></span><br></p>
 
 
 <figure style="max-width: 746px;"><img src="https://images-ext-2.discordapp.net/external/GXLtgDuY30Jf79j4o-JMcm1YaCXh-pnhIx5Kgoe0_Z4/%3Fsize%3D1024/https/cdn.discordapp.com/icons/740241384090632332/9f28374b0314775ce7e303b2adb68f02.png?width=481&height=481" data-image="scbu31ylfu3a" width="746" height="448" style="width: 746px; height: 448px;"></figure>
