--- a/donacion.html
+++ b/donacion.html
@@ -138,7 +138,7 @@
 		<div class="row">
 							<div class="col-md-12">
 					<div class="text-center">
-													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png;overlay=true" class="img-circle">
+													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png" class="img-circle">
 												<br>
 						<b>Double</b><br>
 						1x Imperior (Permanente)
@@ -146,7 +146,7 @@
 				</div>
 							<div class="col-md-12">
 					<div class="text-center">
-													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png;overlay=true" class="img-circle">
+													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png" class="img-circle">
 												<br>
 						<b>Double</b><br>
 						1x Donacion libre
@@ -154,7 +154,7 @@
 				</div>
 							<div class="col-md-12">
 					<div class="text-center">
-													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png;overlay=true" class="img-circle">
+													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png" class="img-circle">
 												<br>
 						<b>Double</b><br>
 						1x imperior 30D (Temporal)
@@ -162,7 +162,7 @@
 				</div>
 							<div class="col-md-12">
 					<div class="text-center">
-													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png;overlay=true" class="img-circle">
+													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png" class="img-circle">
 												<br>
 						<b>CqlvitoYT</b><br>
 						1x Unban 
