--- a/donacion.html
+++ b/donacion.html
@@ -164,7 +164,7 @@
 					<div class="text-center">
 													<img src="https://cravatar.eu/helmavatar/eb547bda-1a4a-4e16-a547-685e0d902359/100.png" class="img-circle">
 												<br>
-						<b>CqlvitoYT</b><br>
+						<b>Double</b><br>
 						1x Unban 
 					</div><br/><br/>
 				</div>
