--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                                     <li><a href="/category/162934">Rangos (Permanentes)</a></li>
                                                             </ul>
                         </li>
-                                                                                                            <li><a href="/category/162937">DONACIONES</a></li>
+                                                                                                            <li><a href="../donacion.hmtl">DONACIONES</a></li>
                             
                                                                                                             <li><a href="/category/163129">SKYWARS</a></li>
                             
