--- a/donacion.html
+++ b/donacion.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="dns-prefetch" href="https://cdn.craftingstore.net">
-    <link rel="icon" href="https://cdn.craftingstore.net/rPPmDHlLQ1/7ec6e2c098e5b8cc247b3d953d5faca2/w2cks94zv5z53bge7g4a.png">
-    <title>Imperior Network | DONACIONES</title>
+    <link rel="dns-prefetch" href="https://i.redd.it/gx8ebkpckre31.png">
+    <link rel="icon" href="../PicsArt_08-04-01.39.39.png">
+    <title>Imperior Network | INICIO</title>
 
     <link rel="stylesheet" href="https://cdn.craftingstore.net/file/craftingstore-cdn/assets/shops/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.craftingstore.net/file/craftingstore-cdn/assets/shops/css/themes/darkly.min.css">
@@ -17,7 +16,7 @@
     <link rel="stylesheet" href="/assets/7505d64a54e061b7acd54ccd58b49dc43500b635/style.css?v=1597280603">
 </head>
 
-<body style="background-image: url('https://cdn.craftingstore.net/rPPmDHlLQ1/7ec6e2c098e5b8cc247b3d953d5faca2/rpsa32gwv53lidz1h81p.jpg')" >
+<body style="background-image: url('https://i.redd.it/gx8ebkpckre31.png')" >
 
 <!-- container -->
 <div class="container">
@@ -25,7 +24,7 @@
     <!-- header -->
     <div class="header">
     <div class="logo">
-        <a href="/"><img height="300" width="600" src="https://cdn.craftingstore.net/rPPmDHlLQ1/7ec6e2c098e5b8cc247b3d953d5faca2/rs1utdkb5vkj1ajzoa82.png"></a>
+        <a href="/"><img height="300" width="300" src="../PicsArt_08-04-01.39.39.png"></a>
     </div>
 </div>
     <!-- nav -->
@@ -41,7 +40,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">INICIO</a></li>
+                <li><a href="../index.html">INICIO</a></li>
                                                             <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 RANGOS
