--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="El Sitio Official De ImperiorNetwork">
+    <meta name="author" content="Double">
     <link rel="dns-prefetch" href="https://i.redd.it/gx8ebkpckre31.png">
     <link rel="icon" href="../PicsArt_08-04-01.39.39.png">
     <title>Imperior Network | INICIO</title>
